--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "exports-loader": "^0.7.0",
     "leaflet": "^1.3.3",
+    "leaflet-sidebar": "^0.2.0",
     "leaflet.fullscreen": "^1.4.5",
     "leaflet.gridlayer.googlemutant": "^0.7.0",
     "leaflet.locatecontrol": "^0.62.0",
@@ -13,6 +14,7 @@
     "react-dom": "^16.4.2",
     "react-leaflet": "^2.0.0",
     "react-scripts": "1.1.4",
+    "sidebar-v2": "^0.4.0",
     "tachyons": "^4.11.1"
   },
   "scripts": {
