--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.2",
+    "@fortawesome/free-solid-svg-icons": "^5.2.0",
+    "@fortawesome/react-fontawesome": "^0.1.2",
     "exports-loader": "^0.7.0",
+    "font-awesome": "^4.7.0",
+    "i": "^0.3.6",
     "leaflet": "^1.3.3",
     "leaflet-sidebar": "^0.2.0",
     "leaflet.fullscreen": "^1.4.5",
     "leaflet.gridlayer.googlemutant": "^0.7.0",
     "leaflet.locatecontrol": "^0.62.0",
+    "npm": "^6.3.0",
     "prunecluster": "^2.1.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
