--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "leaflet.fullscreen": "^1.4.5",
     "leaflet.gridlayer.googlemutant": "^0.7.0",
     "leaflet.locatecontrol": "^0.62.0",
-    "npm": "^6.3.0",
+    "leaflet.markercluster": "^1.3.0",
+    "npm": "^6.4.0",
     "prunecluster": "^2.1.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
