--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "npm": "^6.4.0",
     "prunecluster": "^2.1.0",
     "react": "^16.4.2",
+    "react-autosuggest": "^9.4.0",
     "react-dom": "^16.4.2",
+    "react-isolated-scroll": "^0.1.1",
     "react-leaflet": "^2.0.0",
     "react-scripts": "1.1.4",
     "sidebar-v2": "^0.4.0",
