--- a/package.json
+++ b/package.json
@@ -6,24 +6,34 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@fortawesome/react-fontawesome": "^0.1.2",
+    "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
     "exports-loader": "^0.7.0",
     "font-awesome": "^4.7.0",
     "i": "^0.3.6",
-    "leaflet": "^1.3.3",
-    "leaflet-sidebar": "^0.2.0",
+    "leaflet": "^1.3.4",
+    "leaflet-contextmenu": "^1.4.0",
+    "leaflet-dialog": "^1.0.4",
+    "leaflet-sidebar-v2": "^3.0.2",
+    "leaflet-slidemenu": "^0.4.1",
     "leaflet.fullscreen": "^1.4.5",
     "leaflet.gridlayer.googlemutant": "^0.7.0",
     "leaflet.locatecontrol": "^0.62.0",
     "leaflet.markercluster": "^1.3.0",
+    "materialize-css": "^0.100.2",
     "npm": "^6.4.0",
     "prunecluster": "^2.1.0",
     "react": "^16.4.2",
     "react-autosuggest": "^9.4.0",
+    "react-bootstrap": "^0.32.3",
+    "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.2",
     "react-isolated-scroll": "^0.1.1",
-    "react-leaflet": "^2.0.0",
+    "react-leaflet": "^2.0.1",
+    "react-modal": "^3.5.1",
     "react-scripts": "1.1.4",
     "sidebar-v2": "^0.4.0",
+    "styled-components": "^3.4.5",
     "tachyons": "^4.11.1"
   },
   "scripts": {
