--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.4.0",
         "bootstrap": "^4.1.3",
+        "dexie": "^2.0.4",
         "leaflet": "^1.3.4",
         "leaflet-contextmenu": "^1.4.0",
         "leaflet-slidemenu": "^0.4.1",
