--- a/package.json
+++ b/package.json
@@ -1,38 +1,37 @@
 {
-  "name": "maps",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.4.0",
-    "bootstrap": "^4.1.3",
-    "dexie": "^2.0.4",
-    "leaflet": "^1.3.4",
-    "leaflet-contextmenu": "^1.4.0",
-    "leaflet-slidemenu": "^0.4.1",
-    "leaflet.locatecontrol": "^0.62.0",
-    "leaflet.markercluster": "^1.3.0",
-    "npm": "^6.4.1",
-    "react": "^16.4.2",
-    "react-autosuggest": "^9.4.0",
-    "react-bootstrap": "^0.32.3",
-    "react-burger-menu": "^2.5.2",
-    "react-dom": "^16.4.2",
-    "react-leaflet": "^2.0.1",
-    "react-modal": "^3.5.1",
-    "react-scripts": "^2.1.3",
-    "styled-components": "^3.4.5",
-    "tachyons": "^4.11.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+	"name": "maps",
+	"version": "0.1.0",
+	"private": true,
+	"homepage": "https:'//christianmarca.github.io/StatusBaseStation",
+	"dependencies": {
+		"@fortawesome/fontawesome-free": "^5.4.0",
+		"bootstrap": "^4.1.3",
+		"dexie": "^2.0.4",
+		"gh-pages": "^2.0.1",
+		"leaflet": "^1.3.4",
+		"leaflet-contextmenu": "^1.4.0",
+		"leaflet-slidemenu": "^0.4.1",
+		"leaflet.locatecontrol": "^0.62.0",
+		"leaflet.markercluster": "^1.3.0",
+		"npm": "^6.4.1",
+		"react": "^16.4.2",
+		"react-autosuggest": "^9.4.0",
+		"react-bootstrap": "^0.32.3",
+		"react-burger-menu": "^2.5.2",
+		"react-dom": "^16.4.2",
+		"react-leaflet": "^2.0.1",
+		"react-modal": "^3.5.1",
+		"react-scripts": "^2.1.3",
+		"styled-components": "^3.4.5",
+		"tachyons": "^4.11.1"
+	},
+	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test --env=jsdom",
+		"eject": "react-scripts eject"
+	},
+	"browserslist": [ ">0.2%", "not dead", "not ie <= 11", "not op_mini all" ]
 }
