Connect to heroku

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "maps",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https:'//christianmarca.github.io/StatusBaseStation",
+	"homepage": "https://christianmarca.github.io/StatusBaseStation",
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^5.4.0",
 		"bootstrap": "^4.1.3",
